--- a/src/locales/tl-PH/index.json
+++ b/src/locales/tl-PH/index.json
@@ -21,7 +21,7 @@
     "message": "Linux"
   },
   "app-marketing.download.linux-disclaimer": {
-    "message": "<issues-link>Alam na may suliranin</issues-link> ang bersiyong Linux ng Modrinth App sa iilang mga kaayusan at pagsasaayos. Kapag hindi matatag ang Modrinth App sa iyong kaayusan, hinihikayat ka namin na subukan ang ibang mga palatuntunan tulad ng <prism-link>Prism Launcher</prism-link> upang mapadali ang pagkakabit ng nilalamang Modrinth."
+    "message": "<issues-link>Alam na may suliranin</issues-link> ang bersiyong Linux ng AllayLauncher sa iilang mga kaayusan at pagsasaayos. Kapag hindi matatag ang AllayLauncher sa iyong kaayusan, hinihikayat ka namin na subukan ang ibang mga palatuntunan tulad ng <prism-link>Prism Launcher</prism-link> upang mapadali ang pagkakabit ng nilalamang AllayHub."
   },
   "app-marketing.download.mac": {
     "message": "Mac"
@@ -30,10 +30,10 @@
     "message": "Mga pagpipilian sa pagdalamba"
   },
   "app-marketing.download.terms": {
-    "message": "Sa pagdalamba ng Modrinth App, sumasang-ayon ka sa aming <terms-link>Mga Tuntunin</terms-link> at <privacy-link>Patakaran sa Pribasya</privacy-link>."
+    "message": "Sa pagdalamba ng AllayLauncher, sumasang-ayon ka sa aming <terms-link>Mga Tuntunin</terms-link> at <privacy-link>Patakaran sa Pribasya</privacy-link>."
   },
   "app-marketing.download.title": {
-    "message": "Idalamba ang Modrinth App (Beta)"
+    "message": "Idalamba ang AllayLauncher (Beta)"
   },
   "app-marketing.download.windows": {
     "message": "Windows"
@@ -45,7 +45,7 @@
     "message": "Mga Kilos"
   },
   "app-marketing.features.mod-management.description": {
-    "message": "Pinapadali ng Modrinth na pamahalaan ang lahat ng iyong pambago sa iisang pook. Makakakabit, makakaalis, at makakapagsapanahon ng mga pambago sa iisang pindot lang."
+    "message": "Pinapadali ng AllayHub na pamahalaan ang lahat ng iyong pambago sa iisang pook. Makakakabit, makakaalis, at makakapagsapanahon ng mga pambago sa iisang pindot lang."
   },
   "app-marketing.features.mod-management.installed-mods": {
     "message": "Mga pambagong kinabit"
@@ -75,7 +75,7 @@
     "message": "< 150 MB"
   },
   "app-marketing.features.performance.modrinth-app": {
-    "message": "Modrinth App"
+    "message": "AllayLauncher"
   },
   "app-marketing.features.performance.one-billion-percent": {
     "message": "1 gatos na %"
@@ -87,7 +87,7 @@
     "message": "Maliit"
   },
   "app-marketing.features.play.description": {
-    "message": "Gamitin ang Modrinth App sa pagdalamba at paglaro ng iyong mga paboritong pambago at balot ng pambago."
+    "message": "Gamitin ang AllayLauncher sa pagdalamba at paglaro ng iyong mga paboritong pambago at balot ng pambago."
   },
   "app-marketing.features.sharing.modpack": {
     "message": "Balot ng pambago"
@@ -99,13 +99,13 @@
     "message": "Magbahagi ng mga balot ng pambago"
   },
   "app-marketing.hero.download-button": {
-    "message": "Idalamba ang Modrinth App"
+    "message": "Idalamba ang AllayLauncher"
   },
   "app-marketing.hero.download-modrinth-app": {
-    "message": "Idalamba ang Modrinth App"
+    "message": "Idalamba ang AllayLauncher"
   },
   "app-marketing.hero.download-modrinth-app-for-os": {
-    "message": "Idalamba ang Modrinth App para sa {os}"
+    "message": "Idalamba ang AllayLauncher para sa {os}"
   },
   "app-marketing.hero.more-download-options": {
     "message": "Higit na Pagpipilian sa Pagdalamba"
@@ -144,7 +144,7 @@
     "message": "Dagisulat"
   },
   "auth.sign-up.legal-dislaimer": {
-    "message": "Sa paglikha ng panagutan, sumasang-ayon ka sa <terms-link>Mga Tuntunin</terms-link> at <privacy-policy-link>Patakaran sa Pribasiya</privacy-policy-link> ng Modrinth."
+    "message": "Sa paglikha ng panagutan, sumasang-ayon ka sa <terms-link>Mga Tuntunin</terms-link> at <privacy-policy-link>Patakaran sa Pribasiya</privacy-policy-link> ng AllayHub."
   },
   "auth.sign-up.sign-in-option.title": {
     "message": "Mayroon ka nang panagutan?"
@@ -171,7 +171,7 @@
     "message": "Bahagi ka na ngayon ng nitong kahanga-hangang pamayanan kabilang sa mga tagalikha at manlalakbay na nagtataguyod, nagdadalamba, at nananatiling napapanahon sa mga nakamamanghang mga pambago."
   },
   "auth.welcome.label.tos": {
-    "message": "Sa paglikha ng panagutan, sumang-ayon ka na sa <terms-link>Mga Tuntunin</terms-link> at <privacy-policy-link>Patakaran sa Pribasiya</privacy-policy-link> ng Modrinth."
+    "message": "Sa paglikha ng panagutan, sumang-ayon ka na sa <terms-link>Mga Tuntunin</terms-link> at <privacy-policy-link>Patakaran sa Pribasiya</privacy-policy-link> ng AllayHub."
   },
   "auth.welcome.title": {
     "message": "Maligayang Pagdating"
@@ -369,7 +369,7 @@
     "message": "Maaaring nagpalit ng pangalan o tinanggal ng may-ari ang kanilang panagutan."
   },
   "error.user.404.list_item.3": {
-    "message": "Maaaring tinapos ang kanyang panagutan dahil sa paglabag sa <tou-link>Mga Tuntunin sa Paggamit</tou-link> ng Modrinth."
+    "message": "Maaaring tinapos ang kanyang panagutan dahil sa paglabag sa <tou-link>Mga Tuntunin sa Paggamit</tou-link> ng AllayHub."
   },
   "error.user.404.list_title": {
     "message": "Bakit?"
@@ -393,7 +393,7 @@
     "message": "Makatanggap ng detalyadong ulat ng mga pagtingin ng pahina, bilang ng pagdownload, at kinikita"
   },
   "landing.feature.launcher.description": {
-    "message": "Binibigyang-daan ng bukas na pinagmulang API ng Modrinth ang mga tagapaglunsad na makadagdag ng malalimang pagsasama sa Modrinth. Maaari mong gamitin ang Modrinth sa <link>aming aplikasyon</link> at sa iilang pinakasikat na mga tagapaglunsad gaya ng ATLauncher, MultiMC, at Prism Launcher."
+    "message": "Binibigyang-daan ng bukas na pinagmulang API ng AllayHub ang mga tagapaglunsad na makadagdag ng malalimang pagsasama sa AllayHub. Maaari mong gamitin ang AllayHub sa <link>aming aplikasyon</link> at sa iilang pinakasikat na mga tagapaglunsad gaya ng ATLauncher, MultiMC, at Prism Launcher."
   },
   "landing.heading.the-place-for-minecraft": {
     "message": "Ang pook para sa Allay na {content}"
@@ -447,10 +447,10 @@
     "message": "Bisitahin ang mga kagustuhan sa panagutan"
   },
   "layout.banner.add-email.description": {
-    "message": "Dahil sa mga kadahilang pangkaligtasan, kailangan ng Modrinth na makapagrehistro ka ng padalahan ng dagisulat sa iyong panagutan."
+    "message": "Dahil sa mga kadahilang pangkaligtasan, kailangan ng AllayHub na makapagrehistro ka ng padalahan ng dagisulat sa iyong panagutan."
   },
   "layout.banner.build-fail.description": {
-    "message": "Bigong makabuo ng kalagayan galing sa API ang nitong pinakalat na frontend ng Modrinth. Marahil dahil ito sa isang pagkawalan o kamalian sa pagsasaaayos. Muling itayo kapag magagamit na ang API. Mga palahudyatan ng kamalian: {errors}; Ang kasalukuyang URL ng API: {url}"
+    "message": "Bigong makabuo ng kalagayan galing sa API ang nitong pinakalat na frontend ng AllayHub. Marahil dahil ito sa isang pagkawalan o kamalian sa pagsasaaayos. Muling itayo kapag magagamit na ang API. Mga palahudyatan ng kamalian: {errors}; Ang kasalukuyang URL ng API: {url}"
   },
   "layout.banner.build-fail.title": {
     "message": "May kamalian sa pagbuo ng katayuan galing sa API habang nagpapatayo."
@@ -459,7 +459,7 @@
     "message": "Mayroong mga suskripsiyong bigong makapagpanibago. Mangyaring isapanahon ang iyong paraan ng pagbabayad upang maiwasang mawalan ng daan!"
   },
   "layout.banner.verify-email.description": {
-    "message": "Dahil sa mga kadahilang pangkaligtasan, kailangan ng Modrinth na mapatunayan ang padalahan ng dagisulat sa iyong panagutan."
+    "message": "Dahil sa mga kadahilang pangkaligtasan, kailangan ng AllayHub na mapatunayan ang padalahan ng dagisulat sa iyong panagutan."
   },
   "layout.footer.about": {
     "message": "Tungkol"
@@ -501,16 +501,16 @@
     "message": "Mga Tuntunin sa Paggamit"
   },
   "layout.footer.open-source": {
-    "message": "<github-link>Bukas na pinagmulan</github-link> ang Modrinth."
+    "message": "<github-link>Bukas na pinagmulan</github-link> ang AllayHub."
   },
   "layout.footer.products": {
     "message": "Mga Produkto"
   },
   "layout.footer.products.app": {
-    "message": "Modrinth App"
+    "message": "AllayLauncher"
   },
   "layout.footer.products.plus": {
-    "message": "Modrinth+"
+    "message": "AllayHub+"
   },
   "layout.footer.resources": {
     "message": "Mga Mapagkukunan"
@@ -543,7 +543,7 @@
     "message": "X"
   },
   "layout.meta.description": {
-    "message": "Magpasayong sipi ng mga pambago, pansaksak, balot ng malak, tagalilom, balot ng mapagkukunan, at balot ng pambago ng Minecraft sa Modrinth. Tumuklas at maglathala ng mga panukala sa Modrinth na may makabagong, madaling magamit na daungan at API."
+    "message": "Magpasayong sipi ng mga pambago, pansaksak, balot ng malak, tagalilom, balot ng mapagkukunan, at balot ng pambago ng Minecraft sa AllayHub. Tumuklas at maglathala ng mga panukala sa AllayHub na may makabagong, madaling magamit na daungan at API."
   },
   "layout.nav.home": {
     "message": "Tirahan"
@@ -681,10 +681,10 @@
     "message": "0x..."
   },
   "profile.bio.fallback.creator": {
-    "message": "Isang tagalikha sa Modrinth."
+    "message": "Isang tagalikha sa AllayHub."
   },
   "profile.bio.fallback.user": {
-    "message": "Isang tagagamit sa Modrinth."
+    "message": "Isang tagagamit sa AllayHub."
   },
   "profile.details.label.email": {
     "message": "Dagisulat"
@@ -708,10 +708,10 @@
     "message": "Oo"
   },
   "profile.meta.description": {
-    "message": "Magdalamba ng mga panukala ni {username} sa Modrinth"
+    "message": "Magdalamba ng mga panukala ni {username} sa AllayHub"
   },
   "profile.meta.description-with-bio": {
-    "message": "{bio} - Magdalamba ng mga panukala ni {username} sa Modrinth"
+    "message": "{bio} - Magdalamba ng mga panukala ni {username} sa AllayHub"
   },
   "project-member-header.accept": {
     "message": "Tanggapin"
@@ -777,10 +777,10 @@
     "message": "Bersiyon ng laro: {version}"
   },
   "project.download.install-with-app": {
-    "message": "Ikabit gamit ang Modrinth App"
+    "message": "Ikabit gamit ang AllayLauncher"
   },
   "project.download.no-app": {
-    "message": "Wala kang Modrinth App?"
+    "message": "Wala kang AllayLauncher?"
   },
   "project.download.platform": {
     "message": "Batyawan: {platform}"
@@ -801,13 +801,13 @@
     "message": "Idalamba ang {title}"
   },
   "project.environment.migration-no-permission.message": {
-    "message": "Kakaunlad lang ng aming kaayusan sa Mga Kapaligiran sa Modrinth at magagamit na ngayon ang mga bagong pagpipilian. Wala kang pahintulot na magbago sa mga kagustuhang ito, mangyaring ipaalam sa isa pang kasapi ng panukala na kailangang mapatunayan ang maayos na malak ng kapaligiran."
+    "message": "Kakaunlad lang ng aming kaayusan sa Mga Kapaligiran sa AllayHub at magagamit na ngayon ang mga bagong pagpipilian. Wala kang pahintulot na magbago sa mga kagustuhang ito, mangyaring ipaalam sa isa pang kasapi ng panukala na kailangang mapatunayan ang maayos na malak ng kapaligiran."
   },
   "project.environment.migration-no-permission.title": {
     "message": "Kailangang suriin ang maayos na malak ng kapaligiran"
   },
   "project.environment.migration.message": {
-    "message": "Kakaunlad lang ng aming kaayusan sa Mga Kapaligiran sa Modrinth at magagamit na ngayon ang mga bagong pagpipilian. Mangyaring bisitahin ang mga kagustuhan ng iyong panukala at patunaying tama ang maayos na malak."
+    "message": "Kakaunlad lang ng aming kaayusan sa Mga Kapaligiran sa AllayHub at magagamit na ngayon ang mga bagong pagpipilian. Mangyaring bisitahin ang mga kagustuhan ng iyong panukala at patunaying tama ang maayos na malak."
   },
   "project.environment.migration.review-button": {
     "message": "Suriin ang mga kagustuhan sa kapaligiran"
@@ -825,7 +825,7 @@
     "message": "Marami ang kapaligiran ng iyong panukala"
   },
   "project.settings.environment.notice.review-options.description": {
-    "message": "Kakaunlad lang ng aming kaayusan sa Mga Kapaligiran sa Modrinth at magagamit na ngayon ang mga bagong pagpipilian. Mangyaring suriin na tama ang napili sa ibaba at pindutin ang 'Patunayan' kapag tapos ka na!"
+    "message": "Kakaunlad lang ng aming kaayusan sa Mga Kapaligiran sa AllayHub at magagamit na ngayon ang mga bagong pagpipilian. Mangyaring suriin na tama ang napili sa ibaba at pindutin ang 'Patunayan' kapag tapos ka na!"
   },
   "project.settings.environment.verification.verify-button": {
     "message": "Patunayan"
@@ -927,7 +927,7 @@
     "message": "Mga ayos ng talaan ng panukala"
   },
   "settings.display.theme.description": {
-    "message": "Pumili ng iyong gugustohing paksang kulay para sa Modrinth ng nitong pakasam."
+    "message": "Pumili ng iyong gugustohing paksang kulay para sa AllayHub ng nitong pakasam."
   },
   "settings.display.theme.title": {
     "message": "Paksang kulay"
@@ -954,7 +954,7 @@
     "message": "Linikha {ago}"
   },
   "settings.sessions.description": {
-    "message": "Narito ang lahat ng mga pakasam na kasalukuyang nakalog-in sa iyong Modrinth na panagutan. Maaari mong maisaisang ma-logout ang bawat isa.\n\nKung makakita ka ng isang hindi mo nakikilala, maglog-out sa pakasam na iyon at agarang palitan ang lihim na salita ng iyong panagutan sa Modrinth."
+    "message": "Narito ang lahat ng mga pakasam na kasalukuyang nakalog-in sa iyong AllayHub na panagutan. Maaari mong maisaisang ma-logout ang bawat isa.\n\nKung makakita ka ng isang hindi mo nakikilala, maglog-out sa pakasam na iyon at agarang palitan ang lihim na salita ng iyong panagutan sa AllayHub."
   },
   "settings.sessions.unknown-os": {
     "message": "Hindi kilalang OS"
